# ComfyUI-TrixLoader

./: .gitignore  README.md  README_RU.md  __init__.py  pyproject.toml  requirements.txt  trix_loader_nodes.py  trix_presets.json  trix_toolbox.py
web/js/: camraw_box.js  crop_box.js  mask_box.js  trix_camera_raw.js  trix_crop_editor.js  trix_loader_ui.js  trix_mask_editor.js  trix_toolbox.js
