[project]
name = "trixloader"
version = "2.5.1"
description = "Lightroom-style Camera Raw, Advanced AI Mask Editor (SAM 2.1/3, GroundingDINO, RMBG), and Crop-Pad-Outpaint (CPO) Editor for ComfyUI."
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.38.0",
    "huggingface_hub",
    "safetensors",
    "transparent-background",
    "ben2",
    "albumentations",
    "pymatting",
    "timm"
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/trx7111/ComfyUI-TrixLoader"

[tool.comfy]
PublisherId = "trix7111"
DisplayName = "ComfyUI-TrixLoader"
Icon = "https://github.com/trx7111/ComfyUI-TrixLoader/raw/main/assets/cameraraw1.jpg"
